<resources>
    <string name="app_name">Mechanic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email</string>
    <string name="first_name_label">First name</string>
    <string name="error_verifying">The code you entered doesn\'t match the code we sent. Please type the code again. Is %1$s not your phone number? Tap \`Update phone number\` to update.</string>
    <string name="error_verifying_title">Unable to verify code</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name_label">Last name</string>
    <string name="please_verify">Please verify your phone number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset_password_button">Reset</string>
    <string name="reset_password_text">Reset your Car Swaddle account password</string>
    <string name="error_sending_reset_link_title">Car Swaddle was unable to send reset link</string>
    <string name="error_sending_reset_link_message">Please make sure the email you entered is correct. If it is correct, we do not have an account with that email address. Use the sign up button to sign up!</string>
    <string name="success_sending_reset_link_title">Success! Car Swaddle sent a password reset link to %1$s</string>
    <string name="success_sending_reset_link_message">Tap on the link you\'ve received to reset your password. It may take a moment for the email to arrive.</string>
    <string name="success_reset_password_title">Success! You successfully reset your password</string>
    <string name="success_reset_password_message">You\'ll be able to login with your new password right now</string>
    <string name="reset_password">Reset</string>
    <string name="car_swaddle">Car Swaddle</string>
    <string name="resend_code">Resend code</string>
    <string name="verify_code">Verify code</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="update_phone">Update phone number</string>
    <string name="preferences">com.carswaddle.carswaddleandroid.preferences</string>
    <string name="title_activity_schedule_service">Schedule service</string>
    <string name="title_activity_maps">Service schedule</string>
    <string name="title_pre_authentication">Intro</string>
    <string name="set_name">Set Name</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_set_phone_number">Set Phone Number</string>
    <string name="title_verify_phone_number">Verify Phone Number</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="forgot_password_explained">Enter the email address you used to register. We\'ll send you a link to that email address. Tap the link to reset your password.</string>
    <string name="sent_code">We\'ve sent a verification code to %1$s. Please enter the code in the space below.</string>
    <string name="permission_rationale_location">We use your location to find the mechanic nearest to you.</string>
    <string name="permission_required_toast">Permission needed to find your location</string>
    <string name="location_permission_denied">Location permission is missing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="notes">Notes:</string>
    <string name="action_done">Done</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="save_vehicle">Save vehicle</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="license_plate">License plate</string>
    <string name="depleted_redemptions">This coupon code has already been redeemed</string>
    <string name="expired_code">This coupon code is expired</string>
    <string name="incorrect_code">This coupon code is invalid</string>
    <string name="incorrect_mechanic">This coupon code is only valid for another mechanic</string>
    <string name="other_coupon_error">This coupon code is invalid</string>
    <string name="coupon_code_success">Successfully redeemed coupon!</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="save">Save</string>
    <string name="login_failure">Car Swaddle wasn\'t able to find an account with that email and password. If you\'ve already signed up, try resetting your password.</string>
    <string name="login">Login</string>
    <string name="day_autoservices_title">Calendar</string>
    <string name="mechanic_profile">Profile</string>
    <string name="save_button_title">Save</string>
    <string name="conventional">Conventional</string>
    <string name="blend">Blend</string>
    <string name="synthetic">Synthetic</string>
    <string name="high_mileage">High Mileage</string>
    <string name="last_4_social_explain">The last four digits of your social security number are required in order to send you your tax documents at the end of the year. This may be a requirement in order for funds to be put into your account.</string>
    <string name="last_4_social_title">Last 4 of social security number</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="tax_year">Tax year</string>
    <string name="deduct_explained">How much you can deduct (estimate):</string>
    <string name="miles_deduct">How many miles you can deduct (estimate):</string>
</resources>