<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_day_autoservices">

    <fragment
        android:id="@+id/navigation_day_autoservices"
        android:name="com.carswaddle.carswaddlemechanic.ui.calendar.DayAutoServiceListFragment"
        android:label="@string/day_autoservices_title"
        tools:layout="@layout/fragment_day_autoservice_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.carswaddle.carswaddlemechanic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_mechanic_profile"
        android:name="com.carswaddle.carswaddlemechanic.ui.profile.MechanicProfileFragment"
        android:label="@string/mechanic_profile"
        tools:layout="@layout/fragment_mechanic_profile" />
    
</navigation>
