<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin">

                <com.carswaddle.ui.LabeledEditText
                    android:id="@+id/line1LabeledEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/line_1"
                    android:inputType="textPostalAddress"
                    app:value="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin">

                <com.carswaddle.ui.LabeledEditText
                    android:id="@+id/line2LabeledEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/line_2"
                    android:inputType="textPostalAddress"
                    app:value="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin">

                <com.carswaddle.ui.LabeledEditText
                    android:id="@+id/postalCodeLabeledEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/postal_code"
                    android:inputType="number"
                    app:value="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin">

                <com.carswaddle.ui.LabeledEditText
                    android:id="@+id/cityLabeledEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/city"
                    app:value="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin">

                <com.carswaddle.ui.LabeledEditText
                    android:id="@+id/stateLabeledEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:label="@string/state"
                    app:value="" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.carswaddle.carswaddleandroid.ui.view.ProgressButton
        android:id="@+id/saveStreetAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin"
        app:displayText="@string/save_button_title"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>