<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/content_margin"
                android:text="$" />

            <com.carswaddle.ui.LabeledEditText
                android:id="@+id/conventionalLabeledEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/conventional"
                app:value="--" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/content_margin"
                android:text="$" />

            <com.carswaddle.ui.LabeledEditText
                android:id="@+id/blendLabeledEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/blend"
                app:value="--" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/content_margin"
                android:text="$" />

            <com.carswaddle.ui.LabeledEditText
                android:id="@+id/syntheticLabeledEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/synthetic"
                app:value="--" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/content_margin"
                android:text="$" />

            <com.carswaddle.ui.LabeledEditText
                android:id="@+id/highMileageLabeledEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/high_mileage"
                app:value="--" />

        </LinearLayout>

    </LinearLayout>

    <com.carswaddle.carswaddleandroid.ui.view.ProgressButton
        android:id="@+id/savePricingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin"
        app:displayText="@string/save_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>