<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_autoservice_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.mukesh.OtpView
            android:id="@+id/socialSecurityOtpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:inputType="number"
            android:itemBackground="@color/content2"
            android:textColor="@color/text"
            app:OtpCursorColor="@color/brand"
            app:OtpItemCount="9"
            app:OtpItemRadius="@dimen/corner_radius"
            app:OtpItemSpacing="3dp"
            app:OtpItemWidth="36dp"
            app:OtpLineColor="@color/clear"
            app:OtpViewType="rectangle" />

        <TextView
            android:id="@+id/socialSecurityTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/last_4_social_title"
            android:textColor="@color/text"
            android:textSize="@dimen/large_title" />

        <TextView
            android:id="@+id/socialSecurityExplainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:text="@string/last_4_social_explain"
            android:textAlignment="center"
            android:textColor="@color/text2"
            android:textSize="@dimen/text" />

    </LinearLayout>

    <com.carswaddle.carswaddleandroid.ui.view.ProgressButton
        android:id="@+id/socialSecurityProgressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:displayText="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>